--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   
   #confetti
   confetti: ^0.7.0
+  alphabet_scroll_view: ^0.3.1
+
+  #path_provider
+  path_provider: ^1.6.27
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +63,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  
+  assets:
+    - assets/NameFiles/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
